# jax-triton

./: pyproject.toml
jax_triton/: __init__.py
