[project]
name = "jax-triton"
dynamic = ["version"]
description = "JAX + OpenAI Triton integration"
readme = "README.md"
requires-python = ">=3.9,<3.11"
dependencies = [
  "absl-py>=1.4.0",
  "jax >= 0.4.23",
  "triton >= 2.2.0",
]

[project.optional-dependencies]
cuda12 = [
  "jaxlib @ https://storage.googleapis.com/jax-releases/cuda12/jaxlib-0.4.23+cuda12.cudnn89-cp310-cp310-manylinux2014_x86_64.whl"
]
cuda12_pip = [
  "jaxlib[cuda12_pip] @ https://storage.googleapis.com/jax-releases/cuda12/jaxlib-0.4.23+cuda12.cudnn89-cp310-cp310-manylinux2014_x86_64.whl"
]
cuda11 = [
  "jaxlib @ https://storage.googleapis.com/jax-releases/cuda11/jaxlib-0.4.23+cuda11.cudnn86-cp310-cp310-manylinux2014_x86_64.whl"
]
cuda11_pip = [
  "jaxlib[cuda11_pip] @ https://storage.googleapis.com/jax-releases/cuda11/jaxlib-0.4.23+cuda11.cudnn86-cp310-cp310-manylinux2014_x86_64.whl"
]
tests = [
  "pytest"
]


[build-system]
requires = ["setuptools", "setuptools-scm", "cmake"]
build-backend = "setuptools.build_meta"

[tools.setuptools]
packages = ["jax_triton"]

[tool.setuptools.dynamic]
version = {attr = "jax_triton.version.__version__"}
